--- a/chat/client/embedded.css
+++ b/chat/client/embedded.css
@@ -47,9 +47,10 @@ ul.pages {
 }
 
 .messages {
+    position: relative;
     height: 250px;
     margin: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 10px 20px 10px 20px;
 }
 
