--- a/elements/resources/css/teacher/styles.css
+++ b/elements/resources/css/teacher/styles.css
@@ -19,9 +19,13 @@
 }
 
 .pyramid-animation {
-    display: block;
+    display: none;
     width: 300px;
     height: 200px;
+}
+
+#pyramid-levels-3 {
+    display: block;
 }
 
 #pop-background {
