--- a/elements/resources/css/teacher/styles.css
+++ b/elements/resources/css/teacher/styles.css
@@ -48,3 +48,15 @@
     width: 65%;
     float: right;
 }
+
+.create-flow-next {
+    float: right;
+    width: 200px;
+    margin-top: 40px;
+}
+
+#popup-clearance {
+    display: block;
+    height: 150px;
+    width: 1px;
+}
