--- a/elements/resources/css/teacher/styles.css
+++ b/elements/resources/css/teacher/styles.css
@@ -387,6 +387,28 @@ button.current-activity {
 }
 
 #advanced-expand-button {
-    font-size: 140%;
-    font-weight: bold;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#advanced-expandable-panel {
+    display: none;
+}
+
+#popupAdvanced [data-rel="back"] {
+    width: 20%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+#advanced-buttons {
+    text-align: center;
+}
+
+#popupAdvanced {
+    min-width: 530px;
+}
+
+#advanced-popup-position {
+    margin-left: -240px;
 }
